# BlockCatamari

./: CMakeLists.txt  README.md
include/: catamari.h
include/catamari/: blas.hpp  buffer.h  buffer.hpp  coordinate_matrix-impl.hpp  coordinate_matrix.hpp  dense_basic_linear_algebra-impl.hpp  dense_basic_linear_algebra.hpp  dense_factorizations.hpp  io_utils-impl.hpp  macros.hpp  sparse_ldl-impl.hpp  sparse_ldl.hpp  symmetric_ordering-impl.hpp  symmetric_ordering.hpp
include/catamari/blas/: flame.hpp  mkl.hpp
include/catamari/dense_basic_linear_algebra/: openmp-impl.hpp
include/catamari/dense_factorizations/: cholesky-impl.hpp  cholesky_tbb-impl.hpp
include/catamari/sparse_ldl/scalar/: scalar_utils-impl.hpp  scalar_utils.hpp
include/catamari/sparse_ldl/supernodal/: catamari_config.hh  diagonal_factor-impl.hpp  diagonal_factor.hpp  factorization.hpp  lower_factor-impl.hpp  lower_factor.hpp  supernode_utils-impl.hpp  supernode_utils.hpp
include/catamari/sparse_ldl/supernodal/factorization/: SchurComplementStorage.hpp  block_left_looking-impl.hpp  block_right_looking-impl.hpp  common-impl.hpp  left_looking-impl.hpp  right_looking-impl.hpp  right_looking_legacy_openmp-impl.hpp  right_looking_openmp-impl.hpp  solve-impl.hpp  solve_openmp-impl.hpp  trs_kernels.hpp
src/sparse_ldl/supernodal/factorization/: trs_kernels.cpp
subprojects/: quotient.wrap
